[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://images/main_background.jpg" type="Texture" id=2]

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 53.0
margin_top = 117.0
margin_right = 209.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Isolation Game"
align = 1

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="Button" parent="Buttons"]
margin_left = 178.0
margin_top = 198.0
margin_right = 219.0
margin_bottom = 218.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
flat = true

[node name="Instructions" type="Button" parent="Buttons"]
margin_left = 143.0
margin_top = 245.0
margin_right = 230.0
margin_bottom = 265.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "How to Play"
flat = true

[node name="Quit" type="Button" parent="Buttons"]
margin_left = 178.0
margin_top = 293.0
margin_right = 218.0
margin_bottom = 313.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
flat = true
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
